<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/tv_con"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
       />
    <Button
        android:id="@+id/bt_click_permission_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_type_permission"/>

    <Button
        android:id="@+id/bt_click_login_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_type_login"/>

    <Button
        android:id="@+id/bt_click_weather_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_type_weather"/>

    <Button
        android:id="@+id/bt_click_threadpool_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_type_threadpool"/>
    <Button
        android:id="@+id/bt_click_fragment_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_type_fragment"/>

    <Button
        android:id="@+id/bt_click_layout_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_type_layout"/>
    <Button
        android:id="@+id/bt_click_data_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_type_data"/>

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>

</LinearLayout>